Fix up tests. Adjust spacing. Remove hover arrow for header columns.

--- a/src/datascience-ui/data-explorer/cellFormatter.css
+++ b/src/datascience-ui/data-explorer/cellFormatter.css
@@ -3,5 +3,6 @@
 }
 
 .cell-formatter {
-    margin: -1px 0px 0px 0px;
+    /* Note: This is impacted by the RowHeightAdjustment in reactSlickGrid.tsx */
+    margin: 0px 0px 0px 0px;
 }
